# Quditto

./: .gitignore  LICENSE  Makefile  README.md  compile.sh
Paper YAMLs/: readme.md
Paper YAMLs/Validation 1 - Performance of Orchestration Actions/: config_2nodes.yaml  config_3nodes.yaml  config_5nodes.yaml  config_7nodes.yaml  inventory_2nodes.yaml  inventory_3nodes.yaml  inventory_5nodes.yaml  inventory_7nodes.yaml
Paper YAMLs/Validation 2 - Performance in a Partially Adversarial QKD Environment/: config_validtion_2.yaml  inventory_validation_2.yaml
Tutorial/: README.md  config.yaml
chart/: Chart.yaml  README.md  values.yaml
functional_test/: README.md  config.yaml  functional_test.py
qd2_client/: README.md
qd2_controller/: README.md  pyproject.toml
qd2_node/: pyproject.toml
qd2_orchestrator/: pyproject.toml  setup.py
qd2_orchestrator/src/: cli.py  orchestratorlib.py
qd2_orchestrator/src/qd2_bootstrap/: __main__.py  cli.py
qd2_orchestrator/src/qd2_bootstrap/commands/: cluster.py  infra.py  quditto.py
qd2_orchestrator/src/qd2_bootstrap/models/: cluster_spec.py  infra_spec.py  quditto_deploy_spec.py
qd2_orchestrator/src/qd2_bootstrap/utils/: deps_installer.py  helm.py  helm_set.py  infra_writer.py  kubectl.py  kubeone.py  kubeone_templates.py  logging.py  mapping.py  merge.py  terraform.py  tf_templates.py  wait_ssh.py
qd2_orchestrator/src/qd2_orchestrator/: cli.py  orchestratorlib.py
qdts_orchestrator/: setup.py
qdts_orchestrator/src/: cli.py  orchestratorlib.py
quditto_node/: pyproject.toml
quditto_orchestrator/: setup.py
(+66 files in other folders)
